--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,15 @@
     box-shadow: 0 0 10px yellow;
 }
 
+kbd {
+    display: block;
+    font-size: 40px;
+}
+
+.sound {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: yellow;
+}
+
