--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background-image: ("beachbg.jpg");
+    background-image: URL("beachbg.jpg");
     background-size: cover;
 }
 body,html {
@@ -8,25 +8,29 @@ body,html {
     padding: 0;
     font-family: sans-serif;
 }
-
+h1 {
+    font-size: 5rem;
+    text-align: center;
+    color: #FFFFFF;
+}
 .keys {
     display: flex;
     flex: 1;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     align-items: center;
     justify-content: center;
 }
 .key {
     border: .4px solid black;
-    border-radius: .5px;
+    border-radius: 10px;
     margin: 1rem;
     font-size: 1.5rem;
-    padding: 1rem .5rem;
+    padding: .2rem .5rem;
     transition: all 0.07s ease;
-    width: 10rem;
+    width: 7rem;
     text-align: center;
-    color: white;
-    background: rgba(0,0,0,.4);
+    color: #13CADB;
+    background: rgba(171, 93, 14, 0.4);
     text-shadow: 0 0 .5px #585858;
 }
 .playing {
@@ -42,6 +46,6 @@ kbd {
     font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: 1px;
-    color: #004CFF;
+    color: #FFFF13;
 }
 
